Issue a better to the gap in between competitions
Create a new css element just for competitions

--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -438,7 +438,13 @@ p {
 
 .resouce-items {
     grid-column-gap: 64px;
-    /*grid-row-gap: 64px;*/
+    grid-row-gap: 64px;
+    flex-direction: column;
+    display: flex;
+}
+
+.competition-resouce-items {
+    grid-column-gap: 64px;
     flex-direction: column;
     display: flex;
 }
